Refactor code structure for improved readability and maintainability

--- a/angular.json
+++ b/angular.json
@@ -151,7 +151,8 @@
     "defaultProject": "muffeez-portfolio",
     "schematics": {
         "@schematics/angular:component": {
-            "styleext": "scss"
+            "style": "scss",
+            "skipTests": true
         }
     },
     "cli": {
