feat: update routing structure for blog components, enhance static web app configuration

--- a/angular.json
+++ b/angular.json
@@ -85,6 +85,8 @@
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "options": {
+                        "disableHostCheck": true,
+                        "servePath": "/",
                         "browserTarget": "muffeez-portfolio:build"
                     },
                     "configurations": {
