--- a/src/staticwebapp.config.json
+++ b/src/staticwebapp.config.json
@@ -1,19 +1,12 @@
 {
-    "routes": [
-      {
-        "route": "/*",
-        "serve": "/index.html",
-        "statusCode": 200
-      }
-    ],
-    "navigationFallback": {
-      "rewrite": "/index.html",
-      "exclude": ["/assets/*", "/*.css", "/*.js", "/*.json"]
-    },
-    "responseOverrides": {
-      "404": {
-        "rewrite": "/index.html",
-        "statusCode": 200
-      }
+  "routes": [
+    {
+      "route": "/*",
+      "serve": "/index.html",
+      "statusCode": 200
     }
+  ],
+  "navigationFallback": {
+    "rewrite": "/index.html"
   }
+}
